# accel-T3Flip

./: .gitignore  Anchor.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
.github/workflows/: request-review.yml
Client/: package.json
Client/src/app/: layout.tsx
anchor/: Anchor.toml  codama.js  package.json  tsconfig.json
anchor-program/: README.md  pnpm-lock.yaml
anchor-program/programs/t3-flip/: Cargo.toml
anchor-program/programs/t3-flip/src/: lib.rs
anchor/programs/t3-flip/: Cargo.toml
anchor/programs/t3-flip/src/: error.rs  lib.rs
anchor/programs/t3-flip/src/instructions/: delegate.rs  game_over.rs  guess.rs  init_tree.rs  initialize.rs  mod.rs  undelegate.rs  vrf_callback.rs
anchor/programs/t3-flip/src/state/: game_state.rs
anchor/src/: index.ts  t3flip-exports.ts
anchor/src/client/js/: index.ts
anchor/src/helpers/: get-program-accounts.ts
anchor/src/idl/: t3_flip.json
anchor/tests/: Readme.md  setup-collection.ts  t3-flip.ts
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/audio/: info.txt
frontend/src/app/: globals.css  page.tsx
frontend/src/app/t3flip/: page.tsx
frontend/src/components/: app-footer.tsx  app-header.tsx  app-hero.tsx  app-layout.tsx  audio-settings.tsx
frontend/src/components/solana/: solana-mobile-wallet-adapter.ts
frontend/src/hooks/: useAudioSettings.tsx  useGameSounds.tsx
programs/t3-flip/: Cargo.toml
programs/t3-flip/src/: lib.rs
src/features/t3flip/: t3flip-feature.tsx
tests/: t3-flip.ts
(+19 files in other folders)
