[package]
name = "t3-flip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "t3_flip"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }
mpl-bubblegum = "2.1.1"
mpl-core = "0.9.0" # "0.11.1"
mpl-account-compression = { version = "0.4.2", features = ["cpi"] }
mpl-noop = { version = "0.2.1", features = ["no-entrypoint"] }
